--- a/test/integration/targets/git/tasks/depth.yml
+++ b/test/integration/targets/git/tasks/depth.yml
@@ -171,3 +171,66 @@
   file:
     state: absent
     path: "{{ checkout_dir }}"
+
+#
+# Make sure shallow fetch works when updating a branch
+#
+
+- name: create repo_dir
+  file: path={{repo_dir}} state=directory
+
+- name: prepare tmp git repo with a branch (and go back to master)
+  shell: git init; echo "1" > a; git add a; git commit -m "1"; git checkout -b test_branch; echo "2" > a; git commit -m "2 on branch" a; git checkout master;
+  args:
+    chdir: "{{repo_dir}}"
+
+- name: clone from branch with depth specified
+  git:
+    repo: '{{ repo_dir }}'
+    dest: '{{ checkout_dir }}'
+    depth: 1
+    version: test_branch
+
+- name: check if clone is shallow
+  stat: path={{ checkout_dir }}/.git/shallow
+  register: is_shallow
+  when: git_version.stdout | version_compare("{{git_version_supporting_depth}}", '>=')
+
+- name: assert that clone is shallow
+  assert:
+    that:
+      - is_shallow.stat.exists
+  when: git_version.stdout | version_compare("{{git_version_supporting_depth}}", '>=')
+
+- name: commit on branch in tmp repo (and go back to master)
+  shell: git checkout test_branch;echo "3" > a; git commit -m "3 on branch" a; git checkout master;
+  args:
+    chdir: "{{repo_dir}}"
+
+- name: fetch same updated branch with depth specified
+  git:
+    repo: '{{ repo_dir }}'
+    dest: '{{ checkout_dir }}'
+    depth: 1
+    version: test_branch
+  register: git_fetch
+
+- name: check if branch update arrived
+  assert:
+    that:
+      - git_fetch|changed
+      - "{{ lookup('file', checkout_dir+'/a') | search('3')}}"
+
+- name: check if checkout_dir is shallow
+  stat: path={{ checkout_dir }}/.git/shallow
+  register: is_shallow
+  when: git_version.stdout | version_compare("{{git_version_supporting_depth}}", '>=')
+
+- name: assert that checkout_dir still is shallow
+  assert:
+    that:
+      - is_shallow.stat.exists
+  when: git_version.stdout | version_compare("{{git_version_supporting_depth}}", '>=')
+
+- name: clear checkout_dir
+  file: state=absent path={{ checkout_dir }}
