Add intg tests for delegate_to/delegate_facts/run_once together
Cover some of the cases related to issue #15365 and
in particular, exercise the code path that hit
https://github.com/ansible/ansible/issues/15365#issuecomment-282752186

Note: run_once in a 'with_items: {{ groups.some_group }}' likely
doesn't do anything practical since those contradict. But this
tests covers it to avoid any regressions.

--- a/test/integration/targets/delegate_to/test_delegate_to.yml
+++ b/test/integration/targets/delegate_to/test_delegate_to.yml
@@ -1,3 +1,4 @@
+
 - hosts: testhost3
   vars:
     - template_role: ./roles/test_template
@@ -30,7 +31,9 @@
     - assert:
         that:
           - '"127.0.0.254" in setup_results.ansible_facts.ansible_env["SSH_CONNECTION"]'
-#
+
+
+            #
 # Smoketest some other modules do not error as a canary
 #
     - name: Test file works with delegate_to and a host in inventory
@@ -54,3 +57,108 @@
 
     - name: remove test file
       file: path={{ output_dir }}/tmp.txt state=absent
+
+
+# For testing the case that hit the traceback at https://github.com/ansible/ansible/issues/15365#issuecomment-282752186
+- hosts: testhost3
+  tasks:
+    - name: Test delegate_to in a loop
+      setup:
+      delegate_to: "{{ item }}"
+      with_items: "{{ groups.test_hosts }}"
+
+
+# For testing the case that hit the traceback at https://github.com/ansible/ansible/issues/15365#issuecomment-282752186
+- hosts: testhost3
+  tasks:
+    - name: Test delegate_to in a loop with run_once is true
+      setup:
+      delegate_to: "{{ item }}"
+      with_items: "{{ groups.test_hosts }}"
+      run_once: true
+
+
+# For testing the case that hit the traceback at https://github.com/ansible/ansible/issues/15365#issuecomment-282752186
+- name: Test delegate_to each testhost and delegate_facts is true and run_once is true and in a loop for a single host
+  hosts: testhost3
+  tasks:
+    - name: Gather facts from each host in test_hosts with delegate_to and delegate_facts is true and run once
+      setup:
+      delegate_to: "{{ item }}"
+      delegate_facts: true
+      with_items: "{{ groups.test_hosts }}"
+      run_once: true
+
+
+# For testing the case that hit the traceback at https://github.com/ansible/ansible/issues/15365#issuecomment-282752186
+- name: Test delegate_to testhost4 and delegate_facts is true and run_once is true and in a loop for multiple hosts
+  hosts: test_hosts
+  tasks:
+    - name: Gather facts from other test hosts with run_once and delegate_to testhost4 and delegate_facts is false
+      setup:
+      delegate_to: "{{ item }}"
+      delegate_facts: true
+      run_once: true
+      with_items: "{{ groups.test_hosts }}"
+      ignore_errors: true
+
+
+- name: Test delegate_to testhost4 and delegate_facts is true and run_once is true
+  hosts: test_hosts
+  tasks:
+    - name: Gather facts from other test hosts with run_once and delegate_to testhost4
+      setup:
+      delegate_to: testhost4
+      delegate_facts: true
+      run_once: true
+
+    - name: Assert that the facts for testhost4 are delegated from testhost4 with delegate_facts is true and run_once is true
+      assert:
+        that:
+          - '"127.0.0.4" in hostvars["testhost4"].ansible_env["SSH_CONNECTION"]'
+
+
+- name: Test delegate_to testhost4 and delegate_facts is false and run_once is true
+  hosts: test_hosts
+  tasks:
+    - name: Gather facts from other test hosts with run_once and delegate_to testhost4 and delegate_facts is false
+      setup:
+      delegate_to: testhost4
+      delegate_facts: false
+      run_once: true
+
+    - name: Assert that the facts for testhost4 are delegated from testhost4 with delegate_facts is false and run_once is true
+      assert:
+        that:
+          - '"127.0.0.4" in hostvars["testhost4"].ansible_env["SSH_CONNECTION"]'
+
+
+- hosts: testhost3
+  gather_facts: false
+  tasks:
+    - name: Test delegate_to and delegate_facts
+      setup:
+        gather_subset:
+            - "!network"
+            - "!hardware"
+      delegate_to: testhost4
+      delegate_facts: True
+
+    - name: Assert that the facts for testhost4 are delegated from testhost4 with delegate_facts is true
+      assert:
+        that:
+          - '"127.0.0.4" in hostvars["testhost4"].ansible_env["SSH_CONNECTION"]'
+
+    - name: Test delegate_to and delegate_facts no delegate_facts
+      setup:
+        gather_subset:
+            - "!network"
+            - "!hardware"
+      delegate_to: testhost4
+      delegate_facts: False
+
+    - name: Assert that the facts for testhost3 are delegated from testhost4 with delegate_facts is false
+      assert:
+        that:
+          - '"127.0.0.4" in hostvars["testhost3"].ansible_env["SSH_CONNECTION"]'
+
