Adds custom_data parameter to azure virtual machine resource
Invoke custom_data in an integration test: This invocation of
custom_data should not cause any side effects.

--- a/test/integration/targets/azure_rm_virtualmachine/tasks/virtualmachine.yml
+++ b/test/integration/targets/azure_rm_virtualmachine/tasks/virtualmachine.yml
@@ -73,6 +73,9 @@
         publisher: Canonical
         sku: 16.04-LTS
         version: latest
+      custom_data: |
+        #!/bin/sh
+        echo "custom_data was executed" > /custom_data.txt
   register: output
 
 - assert:
