--- a/test/integration/targets/vmware_guest/tasks/create_d1_c1_f0.yml
+++ b/test/integration/targets/vmware_guest/tasks/create_d1_c1_f0.yml
@@ -50,6 +50,7 @@
         # till the time.
         # memory_reservation: 512
         # memory_reservation_lock: False
+        # nested_virt: True
         max_connections: 10
     disk:
         - size: 0gb
