--- a/test/integration/targets/rds_instance/tasks/main.yml
+++ b/test/integration/targets/rds_instance/tasks/main.yml
@@ -3,7 +3,7 @@
     # important in case we restart the tests after a fail.
     - name: ensure instance we are going to create is not present so create test is valid
       rds_instance:
-        instance_name: "{{ rds_instance_name }}"
+        id: "{{ rds_instance_name }}"
         wait: yes
         state: absent
         region: '{{ec2_region}}'
@@ -13,7 +13,7 @@
 
     - name: ensure non-existent instance is not present
       rds_instance:
-        instance_name: "ansible-test-dont-create-youll-break-the-tests"
+        id: "ansible-test-dont-create-youll-break-the-tests"
         state: absent
         region: '{{ec2_region}}'
         aws_access_key: '{{aws_access_key}}'
@@ -31,7 +31,7 @@
 
     - name: create rds instance
       rds_instance:
-        instance_name: "{{ rds_instance_name }}"
+        id: "{{ rds_instance_name }}"
         wait_timeout: 1200
         wait: yes
         size: 5
@@ -51,7 +51,7 @@
 
     - name: get instance facts
       rds_instance_facts:
-        instance_name: "{{ rds_instance_name }}"
+        id: "{{ rds_instance_name }}"
         region: '{{ec2_region}}'
         aws_access_key: '{{aws_access_key}}'
         aws_secret_key: '{{aws_secret_key}}'
@@ -59,7 +59,7 @@
 
     - name: snapshot instance
       rds_snapshot:
-        instance_name: "{{ rds_instance_name }}"
+        id: "{{ rds_instance_name }}"
         snapshot: "{{ rds_instance_name }}-snapshot"
         wait_timeout: 1200
         wait: yes
@@ -70,7 +70,7 @@
 
     - name: get snapshot facts
       rds_snapshot_facts:
-        instance_name: "{{ rds_instance_name }}"
+        id: "{{ rds_instance_name }}"
         region: '{{ec2_region}}'
         aws_access_key: '{{aws_access_key}}'
         aws_secret_key: '{{aws_secret_key}}'
@@ -95,7 +95,7 @@
 
     - name: modify rds instance
       rds_instance:
-        instance_name: "{{ rds_instance_name }}"
+        id: "{{ rds_instance_name }}"
         wait: yes
         size: 5
         instance_type: db.t2.micro
@@ -115,7 +115,7 @@
 
     - name: don't modify rds instance
       rds_instance:
-        instance_name: "{{ rds_instance_name }}"
+        id: "{{ rds_instance_name }}"
         wait: yes
         size: 5
         instance_type: db.t2.micro
@@ -135,7 +135,7 @@
 
     - name: create rds replica
       rds_instance:
-        instance_name: "{{ rds_instance_name }}-replica"
+        id: "{{ rds_instance_name }}-replica"
         source_instance: "{{ rds_instance_name }}"
         wait: yes
         wait_timeout: 1200
@@ -147,12 +147,12 @@
     # #NOT YET WORKING - bombs out with "No modifications were requested"
     # - name: promote rds replica
     #   rds_instance:
-    #     instance_name: "{{ rds_instance_name }}-replica"
+    #     id: "{{ rds_instance_name }}-replica"
     #     wait: yes
 
     - name: delete rds instance
       rds_instance:
-        instance_name: "{{ rds_instance_name }}"
+        id: "{{ rds_instance_name }}"
         state: absent
         snapshot: "{{ rds_instance_name }}-snapshot"
         wait: yes
@@ -163,7 +163,7 @@
 
     - name: delete replica
       rds_instance:
-        instance_name: "{{ rds_instance_name }}-replica"
+        id: "{{ rds_instance_name }}-replica"
         state: absent
         wait: yes
         region: '{{ec2_region}}'
@@ -173,7 +173,7 @@
 
     - name: restore from snapshot
       rds_instance:
-        instance_name: "{{ rds_instance_name }}-restore"
+        id: "{{ rds_instance_name }}-restore"
         snapshot: "{{ rds_instance_name }}-snapshot"
         wait: yes
         wait_timeout: 1200
@@ -186,7 +186,7 @@
 
     - name: delete rds instance
       rds_instance:
-        instance_name: "{{ rds_instance_name }}"
+        id: "{{ rds_instance_name }}"
         state: absent
         snapshot: "{{ rds_instance_name }}-snapshot"
         wait: yes
@@ -198,7 +198,7 @@
 
     - name: delete restored instance
       rds_instance:
-        instance_name: "{{ rds_instance_name }}-restore"
+        id: "{{ rds_instance_name }}-restore"
         state: absent
         wait: yes
         region: '{{ec2_region}}'
