Digital Ocean Integration tests

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ htmlcov/
 # ansible-test coverage results
 test/units/.coverage.*
 /test/integration/cloud-config-azure.yml
+/test/integration/cloud-config-digital_ocean.yml
