--- a/test/integration/targets/rds_instance/tasks/main.yml
+++ b/test/integration/targets/rds_instance/tasks/main.yml
@@ -98,8 +98,8 @@
         id: "{{ rds_instance_name }}"
         wait: yes
         size: 5
-        instance_type: db.t2.micro
-        db_engine: postgres
+        db_instance_class: db.t2.micro
+        engine: postgres
         master_username: hello
         port: 3307
         apply_immediately: yes
@@ -118,8 +118,8 @@
         id: "{{ rds_instance_name }}"
         wait: yes
         size: 5
-        instance_type: db.t2.micro
-        db_engine: postgres
+        db_instance_class: db.t2.micro
+        engine: postgres
         master_username: hello
         port: 3307
         apply_immediately: yes
