--- a/test/integration/targets/aws_elasticbeanstalk_app/tasks/main.yml
+++ b/test/integration/targets/aws_elasticbeanstalk_app/tasks/main.yml
@@ -20,7 +20,8 @@
       state: present
       aws_access_key: "{{ ec2_access_key }}"
       aws_secret_key: "{{ ec2_secret_key }}"
-      security_token: "{{security_token}}"
+      security_token: "{{ security_token }}"
+      region: "{{ aws_region }}"
     register: result
 
   - name: assert changed is True
@@ -36,7 +37,8 @@
       state: present
       aws_access_key: "{{ ec2_access_key }}"
       aws_secret_key: "{{ ec2_secret_key }}"
-      security_token: "{{security_token}}"
+      security_token: "{{ security_token }}"
+      region: "{{ aws_region }}"
     register: result
 
   - name: assert changed is False since the app already exists
@@ -52,7 +54,8 @@
       state: present
       aws_access_key: "{{ ec2_access_key }}"
       aws_secret_key: "{{ ec2_secret_key }}"
-      security_token: "{{security_token}}"
+      security_token: "{{ security_token }}"
+      region: "{{ aws_region }}"
     register: result
 
   - name: assert changed is True
@@ -61,19 +64,37 @@
         - result.changed == True
 
   # ============================================================
+  - name: retrieve a list of apps
+    aws_elasticbeanstalk_app:
+      state: list
+      aws_access_key: "{{ ec2_access_key }}"
+      aws_secret_key: "{{ ec2_secret_key }}"
+      security_token: "{{ security_token }}"
+      region: "{{ aws_region }}"
+    register: result
+
+  - name: assert changed is True
+    assert:
+      that:
+        - result|success
+
+  # ============================================================
   - name: delete non existent app
     aws_elasticbeanstalk_app:
       app_name: "non_app"
       state: absent
       aws_access_key: "{{ ec2_access_key }}"
       aws_secret_key: "{{ ec2_secret_key }}"
-      security_token: "{{security_token}}"
+      security_token: "{{ security_token }}"
+      region: "{{ aws_region }}"
     register: result
-    ignore_error: True
-  - name: assert deleteing non existant app
+    ignore_error: true
+
+  - name: assert deleteing non existant app fails
     assert:
       that:
-        - 'result.failed'
+        - result.changed == False
+        - 'result.output.startswith("Application not found")'
 
  
   # ============================================================
@@ -83,9 +104,9 @@
       state: absent
       aws_access_key: "{{ ec2_access_key }}"
       aws_secret_key: "{{ ec2_secret_key }}"
-      security_token: "{{security_token}}"
+      security_token: "{{ security_token }}"
+      region: "{{ aws_region }}"
     register: result
-    ignore_error: True
 
   - name: assert changed is True
     assert:
