--- a/test/integration/targets/aws_elasticbeanstalk_app/tasks/main.yml
+++ b/test/integration/targets/aws_elasticbeanstalk_app/tasks/main.yml
@@ -98,6 +98,21 @@
 #         - result.changed == True
 #
   # ============================================================
+  - name: retrieve a list of apps
+    aws_elasticbeanstalk_app:
+      state: list
+      aws_access_key: "{{ ec2_access_key }}"
+      aws_secret_key: "{{ ec2_secret_key }}"
+      security_token: "{{ security_token }}"
+      region: "{{ aws_region }}"
+    register: result
+
+  - name: assert changed is True
+    assert:
+      that:
+        - result|success
+
+  # ============================================================
   - name: delete non existent app
     aws_elasticbeanstalk_app:
       app_name: "non_app"
