--- a/test/integration/targets/aws_elasticbeanstalk_app/tasks/main.yml
+++ b/test/integration/targets/aws_elasticbeanstalk_app/tasks/main.yml
@@ -63,21 +63,41 @@
       that:
         - result.changed == True
 
-  # ============================================================
-  - name: retrieve a list of apps
-    aws_elasticbeanstalk_app:
-      state: list
-      aws_access_key: "{{ ec2_access_key }}"
-      aws_secret_key: "{{ ec2_secret_key }}"
-      security_token: "{{ security_token }}"
-      region: "{{ aws_region }}"
-    register: result
+# Need to have environments also created, this will depend on a aws_elasticbeanstalk_env module being available.
+#   # ============================================================
+#   - name: fail deleting an app that has environments that exist
+#     aws_elasticbeanstalk_app:
+#       app_name: "non_app"
+#       state: absent
+#       aws_access_key: "{{ ec2_access_key }}"
+#       aws_secret_key: "{{ ec2_secret_key }}"
+#       security_token: "{{ security_token }}"
+#       region: "{{ aws_region }}"
+#     register: result
+#     ignore_error: true
+#
+#   - name: assert deleteing app with running environments fail
+#     assert:
+#       that:
+#         - result.changed == False
 
-  - name: assert changed is True
-    assert:
-      that:
-        - result|success
-
+#   # ============================================================
+#   - name: deleting an app that has environments that exist with terminate_by_force True
+#     aws_elasticbeanstalk_app:
+#       app_name: "non_app"
+#       state: absent
+#       terminate_by_force: True
+#       aws_access_key: "{{ ec2_access_key }}"
+#       aws_secret_key: "{{ ec2_secret_key }}"
+#       security_token: "{{ security_token }}"
+#       region: "{{ aws_region }}"
+#     register: result
+#
+#   - name: assert deleteing app with running environments with terminate_by_force True
+#     assert:
+#       that:
+#         - result.changed == True
+#
   # ============================================================
   - name: delete non existent app
     aws_elasticbeanstalk_app:
@@ -95,7 +115,8 @@
       that:
         - result.changed == False
         - 'result.output.startswith("Application not found")'
- 
+
+
   # ============================================================
   - name: delete existing app
     aws_elasticbeanstalk_app:
