--- a/test/integration/targets/rds_instance/tasks/main.yml
+++ b/test/integration/targets/rds_instance/tasks/main.yml
@@ -212,7 +212,7 @@
         engine: postgres
         master_username: hello
         wait: yes
-        wait_timeout: 1200
+        wait_timeout: 2000
         region: '{{ec2_region}}'
         aws_access_key: '{{aws_access_key}}'
         aws_secret_key: '{{aws_secret_key}}'
@@ -260,6 +260,7 @@
         size: 5
         db_instance_class: db.t2.micro
         engine: postgres
+        master_username: hello
         wait: yes
         wait_timeout: 1200
         region: '{{ec2_region}}'
