review related fixes

--- a/test/integration/targets/azure_rm_aci/tasks/main.yml
+++ b/test/integration/targets/azure_rm_aci/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Create sample container group
   azure_rm_aci:
     resource_group: "{{ resource_group }}"
-    name: mynewcontainergroup
+    name: "aci{{ resource_group | hash('md5') | truncate(7, True, '') }}"
     os_type: linux
     ip_address: public
     ports:
@@ -27,7 +27,7 @@
 - name: Remove ACI instance
   azure_rm_aci:
     resource_group: "{{ resource_group }}"
-    name: mynewcontainergroup
+    name: "aci{{ resource_group | hash('md5') | truncate(7, True, '') }}"
     os_type: linux
     ip_address: public
     ports:
